# vext

./: .editorconfig  .guix-channel  CHANGELOG.adoc  CITATION.cff  Containerfile  ECOSYSTEM.scm  Justfile  LICENSE.txt  README.adoc  RSR_COMPLIANCE.adoc  STATE.scm  codemeta.json  guix.scm
.github/: dependabot.yml
.github/workflows/: aur-publish.yml  codeql.yml  container.yml  generator-generic-ossf-slsa3-publish.yml  guix-nix-policy.yml  jekyll-gh-pages.yml  language-policy.yml  npm-bun-blocker.yml  quality.yml  release.yml  rsr-antipattern.yml  scorecard.yml  security-policy.yml  wellknown-enforcement.yml
.well-known/: dc.xml
aur/: .SRCINFO  PKGBUILD  PKGBUILD-bin
docs/: CITATIONS.adoc
vext-core/: Cargo.toml
